update: routes path, swagger example
